[package]
name = "conspectus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version= "0.10.4", features = ["blocking", "json"]}
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.48"
rust-ini = "0.18.0"
handlebars = "4.3.6"
url = "2.3.1"